assets/css/style.scss
@import url("https://fonts.googleapis.com/css?family=Roboto");
@import "global";
@import "header";
@import "footer";
@import "typography";
body:not(.admin).btn {
  border-radius: 2px;
  font-size: 1rem;
  font-weight: 500;
  border-width: 3px;
  line-height: 1.5;
  background-color: $blue;
  border-color: $blue;
  color: white;
  line-height: 36px;
  padding-top: 0;
  padding-bottom: 0;
}
.btn,
.nav-pills .nav-link {
  border-radius: 0 !important;
}
.nav-pills .nav-link:hover,
.nav-pills .show > .nav-link:hover {
  background-color: $blue !important;
  color: white;
  transition: color $transition ease, background-color $transition ease;
}

.btn-gradient-secondary {
  color: white;
  border: none;
  background: linear-gradient(to left, $turquoise, $blue) !important;
  background-repeat: repeat;
  background-size: 200% 100% !important;
  transition: all 0.2s;
  background-position: 5% 0 !important;
  &:hover {
    color: white;
    background-position: 95% 0 !important;
  }
}
.mh-100 {
  min-height: 100vw;
}
code {
  color: $textOrange;
}
nav.container:after {
  display: none !important;
}
.overflow-hidden {
  overflow: hidden;
}
.half-transparent {
  opacity: 0.5;
}

/******************************************
JUMBOTRON SECTION
 *******************************************/
.jumbotron-courses {
  text-align: center;
  position: absolute;
  min-width: 20%;
  top: 25%;
  height: 500px;
  background: rgba(0, 0, 0, 0.3);
  font-weight: lighter;
  text-transform: uppercase;
  color: white;
}
/******************************************
//////////////////////////////////////////
 ONE YEAR COURSE STYLING
//////////////////////////////////////////
*******************************************/

/******************************************
  SCROLLSPY
*******************************************/

ul.nav-courses-pills {
  max-width: 50rem;
  word-wrap: break-word;
  top: 15px;
  padding: 10px;
  position: sticky;
  list-style: none;
  color: $blue;
}

a.nav-link {
  font-size: 1rem;
  padding: 5px;
}

.jumbotron-header {
  color: white;
  margin-bottom: 100px;
}
.paragraph-jumbotron {
  margin-bottom: 100px;
}
a:active,
a:focus,
a:hover {
  outline: none;
}
a:hover {
  text-decoration: none;
  color: #222;
  text-decoration: underline;
}

.testimonials-button-wrap {
  margin: 2rem 0;
}

#linkButton {
  font-size: 1rem;
}
/******************************************
STATS COUNTER
 *******************************************/

#stats {
  .sidepanel {
    transition: transform 0.3s ease;
  }
  &:hover {
    .sidepanel {
      transform: translateX(-100%);
    }
  }
}
.counter-item {
  text-align: center;
}

.section-counter {
  padding: 3rem 0;
}
.counter-item .counter-number {
  font-size: 3rem;
  font-weight: 400;
  line-height: 1;
}

.row::after {
  display: table;
  clear: both;
  content: "";
}
.row {
  margin-right: -0.9375rem;
  margin-left: -0.9375rem;
}

/******************************************
UPCOMING EVENTS
 *******************************************/
.event-item {
  margin-bottom: 2rem;
  background: rgba(0, 122, 255, 0.1);
  padding: 1.5rem;
  display: flex;
}

.event-item-body {
  flex: 1;
}

.event-item h3 {
  margin-bottom: 0.5rem;
}
.event-item p {
  margin: 0;
}
.event-item-date {
  margin-right: 1.5rem;
  text-align: center;
  padding: 0.5rem;
}
.event-item-date .event-month {
  display: block;
  text-transform: uppercase;
  font-size: 0.8rem;
}

.event-item-date .event-day {
  display: block;
  font-size: 1.75rem;
  line-height: 1;
}

.event-item .icon {
  width: 15px;
  color: #777;
  text-align: center;
  margin-right: 0.5rem;
}

*:before,
*:after {
  box-sizing: inherit;
}

.newEvent {
  box-sizing: border-box;
  font-size: 14px;
  font-weight: 500;
  border: none;
}

.u-float-right {
  float: right;
}

.u-flex-center {
  display: -webkit-flex;
  display: flex;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  align-items: center;
}

.newEvent-media {
  border-radius: 0;
  height: 125px;
  transition: all 300ms ease-out;
  width: 100%;
}

.newEvent-media-object-cont {
  background: none;
  float: left;
  height: 100%;
  position: relative;
}

.newEvent-media-object {
  width: 200px;
  height: 100%;
  background-repeat: no-repeat;
  background-size: cover;
}

.newEvent-media-object:after {
  content: " ";
  display: block;
  height: 100%;
  left: 0;
  opacity: 0;
  position: absolute;
  right: 0;
  top: 0;
  transition: all 300ms ease-out;
  z-index: 10;
}

.newEvent-media-body {
  float: left;
  height: 100%;
  padding: 0 15px;
  position: relative;
}

.newEvent-media-body-top {
  display: block;
}

.newEvent-media-body-heading {
  display: block;
  height: auto;
  margin-top: 10px;
}

.newEvent-media-body-supporting-bottom {
  position: absolute;
  bottom: 0;
  left: 0;
  opacity: 1;
  padding: 0 15px;
  transition: all 300ms ease-out;
  width: 100%;
}

.newEvent-media:hover .newEvent-media-body-supporting-bottom {
  opacity: 0;
  padding: 12px 15px;
  transform: translateY(-8px);
}

.newEvent-media-body-supporting-bottom-text {
  display: inline-block;
}

.newEvent-media-body-supporting-bottom-reveal {
  opacity: 0;
  transform: translateY(8px);
  transition: all 300ms ease-out;
}

.newEvent-media:hover .newEvent-media-body-supporting-bottom-reveal {
  opacity: 1;
  transform: translateY(0);
}

.newEvent-media-link {
  color: #da9446 !important;
  font-weight: bold;
}

/******************************************
  LAST UPDATED EVENT
*******************************************/
.card,
.card-img-top {
  border-radius: 0 !important;
}
.card-img-top {
  width: 100%;
  height: 8vw;
  object-fit: cover;
}
.card-body {
  display: flex;
  flex-direction: row;
  font-size: 1.2rem;
  padding: 24px 0;
}

.card-date {
  text-transform: uppercase;
}
.card-date-month {
  color: #da9446;
  font-size: 13px;
}

.card-text {
  color: #6f7287;
}

.event-name {
  font-size: 1.2rem;
  text-transform: capitalize;
}
/* ... */

